  * info: Display trust level when getting info on a uuid, same as on a remote.
  * When upgrading a direct mode repo to v7 with adjusted unlocked branches,
    fix a bug that prevented annex.thin from taking effect for the files
    in working tree.
  * Avoid making a commit when upgrading from direct mode to v7.
  * init: Catch more exceptions when testing locking.

 -- Joey Hess <id@joeyh.name>  Sat, 24 Aug 2019 12:54:35 -0400

git-annex (7.20190819) upstream; urgency=medium

  * New git-lfs special remote, which can be used to store data on any git-lfs
    server, including github, gitlab, and gogs.
  * Support fully encrypting all data sent to a git-lfs special remote,
    using a combination of gcrypt to encrypt the git data, and git-annex's
    encryption of its data.
  * Use the same optimisation for --in=here as has always been
    used for --in=. rather than the slow code path that unncessarily
    queries the git-annex branch.
  * Allow setting up a gcrypt special remote with encryption=shared.
  * Fix querying git for object type when operating on a file containing
    newlines.
  * merge: When run with a branch parameter, merges from that branch.
    This is especially useful when using an adjusted branch, because
    it applies the same adjustment to the branch before merging it.
  * init: Install working hook scripts when run on a crippled filesystem
    and on Windows. If your repository was set up by an old version
    of git-annex that omitted the hooks, you can simply re-run git-annex init
    to install them.
  * init: When the repo is already initialized, and --version requests a
    different version, error out rather than silently not changing the
    version.
  * S3: Fix encoding when generating public urls of S3 objects.
  * Make git-annex-standalone.deb include the shell completions again.
  * Makefile: Changed default zsh completion location to zsh default fpath.
    Systems such as Debian that have overridden the default fpath will